[package]
name = "ez-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
indicatif = "0.18.2"
shellexpand = "3.1.1"
tokio = { version = "1.48.0", features = [ "full" ] }
toml = "0.9.8"
walkdir = "2.5.0"
